--- a/Makefile.epel8-9
+++ b/Makefile.epel8-9
@@ -1,15 +1,17 @@
 #
-# Build mock and local RPM versions of tools for Ansible
+# Build mock and local RPM versions of tools for awxkit
 #
 
 # Assure that sorting is case sensitive
 LANG=C
-MOCKS+=awxkitrepo-8-x86_64
-MOCKS+=awxkitrepo-9-x86_64
-MOCKS+=awxkitrepo-f39-x86_64
-#MOCKS+=awxkitrepo-amz2-x86_64
 
-MOCKCFGS+=$(MOCKS)
+MOCKS+=centos-stream+epel-8-x86_64
+MOCKS+=centos-stream+epel-9-x86_64
+#MOCKS+=fedora-39-x86_64
+
+MOCKCFGS+=awxkitrepo-8-x86_64
+MOCKCFGS+=awxkitrepo-9-x86_64
+#MOCKCFGS+=awxkitrepo-f39-x86_64
 
 #REPOBASEDIR=/var/www/linux/awxkitrepo
 REPOBASEDIR:=`/bin/pwd`/../awxkitrepo
@@ -70,10 +72,10 @@ install:: $(MOCKS)
 	    srpmdir=$(REPOBASEDIR)/$$yumrelease/SRPMS; \
 	    echo "Pushing SRPMS to $$srpmdir"; \
 	    rsync -av $$repo/*.src.rpm --no-owner --no-group $$repo/*.src.rpm $$srpmdir/. || exit 1; \
-	    createrepo -q $$srpmdir/.; \
+	    createrepo_c -q $$srpmdir/.; \
 	    echo "Pushing RPMS to $$rpmdir"; \
 	    rsync -av $$repo/*.rpm --exclude=*.src.rpm --exclude=*debuginfo*.rpm --no-owner --no-group $$repo/*.rpm $$rpmdir/. || exit 1; \
-	    createrepo -q $$rpmdir/.; \
+	    createrepo_c -q $$rpmdir/.; \
 	done
 	@for repo in $(MOCKCFGS); do \
 	    echo "Touching $(PWD)/../$$repo.cfg"; \
